added back search even if no suggestion present

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
     padding: 0.6em 0.95em;
     display: flex;
     align-items: center;
+    text-transform: lowercase;
     border: none;
     outline: none;
     background: rgba(255, 255, 255, 0.25);
