--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,15 @@ main {
 .location {
   color: white; }
   .location__city {
-    font-size: 3.2rem;
+    font-size: 3.6rem;
     margin-bottom: 0.8rem;
-    font-weight: 500; }
+    font-weight: 500;
+    display: flex;
+    align-items: center; }
+    .location__city .icon {
+      font-size: .8em;
+      margin-left: 1.2rem;
+      margin-right: -2.4rem; }
   .location__date {
     font-size: 1.6rem; }
 
@@ -128,7 +134,18 @@ main {
   .current__hi-low {
     font-size: 2.4rem;
     font-weight: 500;
-    text-shadow: 0.1rem 0.4rem rgba(0, 0, 0, 0.5); }
+    text-shadow: 0.1rem 0.4rem rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .current__hi-low .icon {
+      position: relative;
+      top: 1px;
+      font-size: 1.2em;
+      margin: 0 .8rem; }
 
 .hide {
   opacity: 0; }
+
+.icon {
+  display: inline-block; }
