--- a/sass/main.scss
+++ b/sass/main.scss
@@ -127,9 +127,17 @@ main {
 .location {
 	color: white;
 	&__city {
-		font-size: 3.2rem;
+		font-size: 3.6rem;
 		margin-bottom: 0.8rem;
 		font-weight: 500;
+		display: flex;
+		align-items: center;
+
+		.icon {
+			font-size: .8em;
+			margin-left: 1.2rem;
+			margin-right: -2.4rem;
+		}
 	}
 
 	&__date {
@@ -178,9 +186,24 @@ main {
 		font-size: 2.4rem;
 		font-weight: 500;
 		text-shadow: 0.1rem 0.4rem rgba(0, 0, 0, 0.5);
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		.icon {
+			position: relative;
+			top: 1px;
+			font-size: 1.2em;
+			margin: 0 .8rem;
+		}
 	}
 }
 
 .hide {
 	opacity: 0;
+}
+
+.icon {
+	display: inline-block;
 }
