--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 *::after {
   box-sizing: inherit; }
 
+a {
+  text-decoration: none;
+  color: inherit; }
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -38,7 +42,6 @@ body {
     padding: 0.6em 0.95em;
     display: flex;
     align-items: center;
-    text-transform: lowercase;
     border: none;
     outline: none;
     background: rgba(255, 255, 255, 0.25);
