--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,11 @@
 	box-sizing: inherit;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 html {
 	box-sizing: border-box;
 	font-size: 62.5%;
@@ -49,7 +54,7 @@ body {
 		padding: 0.6em 0.95em;
 		display: flex;
 		align-items: center;
-		text-transform: lowercase;
+		// text-transform: lowercase;
 
 		border: none;
 		outline: none;
@@ -66,6 +71,7 @@ body {
 		&:focus {
 			background: rgba(255, 255, 255, 0.6);
 		}
+
 	}
 }
 
