--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,9 @@ body {
     backdrop-filter: blur(4px);
     border-radius: 1.6rem 0 1.6rem 0;
     color: #313131;
-    border-bottom: 0.3rem solid #831b29;
+    border-bottom: 0.3rem solid #a83e2a;
     transform: scale(1, 1);
-    transition: all 300ms ease-out; }
+    transition: background 300ms ease-out, border-radius 150ms ease-out; }
     .header__search-box:focus {
       background: rgba(255, 255, 255, 0.6); }
 
@@ -62,7 +62,8 @@ body {
   max-width: 34rem;
   width: 100%;
   background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(4px); }
+  backdrop-filter: blur(4px);
+  border-bottom-right-radius: 1.6rem; }
   .suggestions__item {
     display: flex;
     justify-content: space-between;
@@ -86,7 +87,9 @@ body {
       background: #ffc600; }
   .suggestions .flag-icon {
     font-size: 2rem;
-    margin-left: .8rem; }
+    margin-left: 0.8rem;
+    filter: saturate(95%) drop-shadow(0 0.2rem 1rem rgba(0, 0, 0, 0.4));
+    border-radius: 50%; }
 
 main {
   margin-top: 5rem;
