--- a/sass/main.scss
+++ b/sass/main.scss
@@ -64,9 +64,9 @@ body {
 		color: #313131;
 
 		// border-bottom: 0.3rem solid hsl(144, 40%, 35%);
-		border-bottom: 0.3rem solid hsl(352, 66%, 31%);
+		border-bottom: 0.3rem solid #a83e2a;
 		transform: scale(1, 1);
-		transition: all 300ms ease-out;
+		transition: background 300ms ease-out, border-radius 150ms ease-out;
 
 		&:focus {
 			background: rgba(255, 255, 255, 0.6);
@@ -84,6 +84,7 @@ body {
 
 	background: rgba(255, 255, 255, 0.25);
 	backdrop-filter: blur(4px);
+	border-bottom-right-radius: 1.6rem;
 
 	&__item {
 		display: flex;
@@ -122,7 +123,9 @@ body {
 
 	.flag-icon {
 		font-size: 2rem;
-		margin-left: .8rem;
+		margin-left: 0.8rem;
+		filter: saturate(95%) drop-shadow(0 0.2rem 1rem rgba(0, 0, 0, 0.4));
+		border-radius: 50%;
 	}
 }
 
