--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,14 @@
 *::after {
   box-sizing: inherit; }
 
+*:focus {
+  outline: none;
+  border: none;
+  box-shadow: none; }
+
 a {
   text-decoration: none;
   color: inherit; }
-  a:focus {
-    outline: none;
-    border: none; }
 
 html {
   box-sizing: border-box;
@@ -41,10 +43,31 @@ body {
   flex-direction: column;
   padding: 5rem 1.5rem 0;
   position: relative; }
+  .header .input-box {
+    max-width: 34rem;
+    width: 100%;
+    position: relative;
+    justify-content: center; }
+  .header #geolocate {
+    background: none;
+    border: none;
+    position: absolute;
+    top: 50%;
+    right: 1rem;
+    transform: translateY(-50%);
+    padding: 0.4rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: all 300ms ease; }
+    .header #geolocate ion-icon {
+      font-size: 2rem;
+      color: #c24f38;
+      display: block; }
+    .header #geolocate:hover {
+      background: rgba(194, 79, 56, 0.2); }
   .header__search-box {
     font: inherit;
     width: 100%;
-    max-width: 34rem;
     padding: 0.6em 0.95em;
     display: flex;
     align-items: center;
