--- a/css/style.css
+++ b/css/style.css
@@ -141,12 +141,15 @@ main {
     .location__city .icon {
       font-size: 0.8em;
       margin-left: 1.2rem;
-      margin-right: -2.4rem; }
+      margin-right: -1.5rem; }
   .location__date {
     font-size: 1.6rem; }
 
 .current {
-  color: white; }
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
   .current__temp {
     font-size: 10.2rem;
     font-weight: 900;
@@ -158,8 +161,6 @@ main {
     .current__temp span {
       font-weight: 600;
       margin-left: 0.8rem; }
-      .current__temp span.unit {
-        font-size: 0.7em; }
   .current__feels-like {
     margin-bottom: 3.6rem;
     font-style: italic; }
@@ -171,19 +172,50 @@ main {
     text-shadow: 0.1rem 0.4rem rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
-    justify-content: center; }
-  .current__hi-low {
+    justify-content: center;
+    cursor: pointer; }
+  .current__group {
     font-size: 2.4rem;
     font-weight: 500;
     text-shadow: 0.1rem 0.4rem rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center; }
-    .current__hi-low .icon {
-      position: relative;
-      top: 1px;
-      font-size: 1.2em;
-      margin: 0 0.8rem; }
+    .current__group > span {
+      display: flex;
+      align-items: center; }
+    .current__group#other {
+      margin-top: 2.4rem;
+      font-size: 1.8rem;
+      display: grid;
+      grid-template-columns: max-content 6rem max-content;
+      row-gap: 1.2rem;
+      justify-content: center; }
+    .current__group .left {
+      grid-column: 1 / span 1;
+      justify-self: end; }
+    .current__group .center {
+      justify-self: center;
+      grid-column: span 2; }
+    .current__group .right {
+      grid-column: -1 / span 1;
+      justify-self: start; }
+    .current__group .full {
+      grid-column: 1 / -1; }
+    .current__group .unit {
+      opacity: 0.8;
+      margin-left: 0.5rem; }
+      .current__group .unit.temp {
+        margin-left: 0.3rem;
+        align-self: start; }
+      .current__group .unit.deg {
+        font-size: 1em;
+        margin-left: 0.1em; }
+  .current .unit {
+    font-size: 0.7em; }
+  .current .icon {
+    font-size: 1.4em;
+    margin: 0 0.8rem; }
 
 .hide {
   opacity: 0; }
