--- a/css/style.css
+++ b/css/style.css
@@ -23,18 +23,21 @@ html {
 
 body {
   font-size: 1.6rem;
-  background: url(../img/bg.jpg) no-repeat;
+  transition: all 1000ms;
+  background: url(../img/bg.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: top center; }
+  background-position: top center;
+  transition: all 1000ms; }
 
 ::selection {
-  background: rgba(239, 129, 107, 0.8); }
+  background: rgba(67, 157, 103, 0.55); }
 
 .app-wrap {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)); }
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.35)); }
 
 .header {
   display: flex;
@@ -61,10 +64,10 @@ body {
     transition: all 300ms ease; }
     .header #geolocate ion-icon {
       font-size: 2rem;
-      color: #c24f38;
+      color: #439d67;
       display: block; }
     .header #geolocate:hover {
-      background: rgba(194, 79, 56, 0.2); }
+      background: rgba(67, 157, 103, 0.1); }
   .header__search-box {
     font: inherit;
     width: 100%;
@@ -77,7 +80,7 @@ body {
     backdrop-filter: blur(4px);
     border-radius: 1.6rem 0 1.6rem 0;
     color: #313131;
-    border-bottom: 0.3rem solid #c24f38;
+    border-bottom: 0.3rem solid #439d67;
     transform: scale(1, 1);
     transition: background 300ms ease-out, border-radius 150ms ease-out; }
     .header__search-box:focus {
@@ -99,7 +102,7 @@ body {
     align-items: center;
     padding: 0.6em 0.95em;
     list-style: none;
-    transition: background 0.2s;
+    transition: background 200ms;
     cursor: pointer; }
     .suggestions__item:hover, .suggestions__item.active {
       background: rgba(255, 255, 255, 0.25); }
@@ -113,7 +116,7 @@ body {
       align-items: center;
       font-weight: 500; }
     .suggestions span.hl {
-      background: rgba(239, 129, 107, 0.8); }
+      background: rgba(235, 235, 107, 0.8); }
   .suggestions .flag-icon {
     font-size: 2rem;
     margin-left: 0.8rem;
@@ -137,11 +140,15 @@ main {
     margin-bottom: 0.8rem;
     font-weight: 500;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    border-bottom: 2px solid transparent;
+    transition: all 300ms ease; }
     .location__city .icon {
       font-size: 0.8em;
       margin-left: 1.2rem;
       margin-right: -1.5rem; }
+    .location__city:hover {
+      transform: skew(-15deg); }
   .location__date {
     font-size: 1.6rem; }
 
@@ -150,6 +157,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center; }
+  .current > * {
+    cursor: crosshair; }
   .current__temp {
     font-size: 10.2rem;
     font-weight: 900;
@@ -173,7 +182,10 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer; }
+    cursor: pointer;
+    transition: all 300ms ease; }
+    .current__weather:hover {
+      transform: skew(-15deg); }
   .current__group {
     font-size: 2.4rem;
     font-weight: 500;
