--- a/sass/main.scss
+++ b/sass/main.scss
@@ -166,7 +166,9 @@ body {
 		}
 
 		&.hl {
-			background: hsla(60, 76%, 67%, 0.8);
+			// background: hsla(60, 76%, 67%, 0.8);
+			font-weight: bold;
+			color: #0E332C;
 		}
 	}
 
